# rm-fit

./: .gitignore  README.md  install.sh  msfp.py  rm-fit.py
data/ils/: ils.txt
data/input/: ch4_co2.msfp  ch4_co2.txt
data/linelists/: diag.txt  diag_61.txt  diag_61_out.txt  diag_62.txt  diag_62_out.txt  offdiag_61.txt  offdiag_61_out.txt
data/tips/: 61_tips.txt  62_tips.txt
src/: CMakeLists.txt  __init__.py  calc.py  calc_g.cpp  ctrl_pars.py  doppler.py  fit.py  linelist.py  msfp.py  opus.py  output.py  pCqSDHC.for  pCqSDHC.pyf  qSDHC.pyf  qSDV.for  qSDV.pyf  racef.py  rautian.py  sd.py  tips.py
